src/objects/Commodities__c.object
<CustomObject>
    <fields>
        <fullName>Effective_date__c</fullName>
        <description>The date from which the entered prices are effective. A price for the same commodity with a later date will supersede any previous prices.</description>
        <inlineHelpText>Enter the date from which these prices will be effective for this commodity. A price for the same commodity with a later date will supersede any previous prices.</inlineHelpText>
        <label>Effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Highest_Retail_Price__c</fullName>
        <label>Highest Retail Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highest_Wholesale_Price__c</fullName>
        <label>Highest Wholesale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lowest_Retail_Price__c</fullName>
        <label>Lowest Retail Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lowest_Wholesale_Price__c</fullName>
        <label>Lowest Wholesale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Markets__c</referenceTo>
        <relationshipName>Commodities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Commodities</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Commodity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commodities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>